Created flatland site

--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no">
     <meta name="theme-color" content="#000000">
+    <script src="https://use.fontawesome.com/0e9b7b8b7f.js"></script>
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <script src="https://player.vimeo.com/api/player.js"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -19,7 +21,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Flatland Church</title>
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Flatland Church">
+    <meta property="fb:app_id" content="1007632336053609" />
+    <meta name="twitter:site" content="@flatlandchurch" />
+    <meta property="place:location:latitude" content="41.3039152">
+    <meta property="place:location:longitude" content="-96.1377482">
+    <link rel="icon" type="image/x-icon" href="https://flatlandchurch.com/static/fl_glyph_favicon.ico">
   </head>
   <body>
     <noscript>
