Updated site for The Move - Added VideoStack groups to management components with VideoStacks - Added DynamicForm and Carousel support to pages

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
     <meta property="place:location:latitude" content="41.3039152">
     <meta property="place:location:longitude" content="-96.1377482">
     <link rel="icon" type="image/x-icon" href="https://flatlandchurch.com/static/fl_glyph_favicon.ico">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <!-- Facebook Pixel Code -->
     <script>
