Cleaned up visit page from Christmas

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no">
     <meta name="theme-color" content="#000000">
     <script src="https://use.fontawesome.com/0e9b7b8b7f.js"></script>
+    <script src="https://js.churchcenter.com/modal/v1"></script>
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
