Added apple icons to index.html

--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,12 @@
     <link rel="icon" type="image/x-icon" href="https://flatlandchurch.com/static/fl_glyph_favicon.ico">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
+    <!-- Icons -->
+    <link rel="apple-touch-icon" href="https://firebasestorage.googleapis.com/v0/b/flatland-api.appspot.com/o/icons%2Ficon-96x96.png?alt=media&token=0465654f-8340-4f63-b258-57d4c32400f8">
+    <link rel="apple-touch-icon" sizes="152x152" href="https://firebasestorage.googleapis.com/v0/b/flatland-api.appspot.com/o/icons%2Ficon-152x152.png?alt=media&token=f1dbc73a-9804-4617-8f5a-60bcb440d37b">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://firebasestorage.googleapis.com/v0/b/flatland-api.appspot.com/o/icons%2Ficon-167x167.png?alt=media&token=81113e67-3e07-42ff-8f02-17f5e3aee3b6">
+    <link rel="apple-touch-icon" sizes="167x167" href="https://firebasestorage.googleapis.com/v0/b/flatland-api.appspot.com/o/icons%2Ficon-180x180.png?alt=media&token=62c6340a-ce77-40a1-bcd7-2a39afff82e3">
+
     <!-- Facebook Pixel Code -->
     <script>
       !function(f,b,e,v,n,t,s)
